package ar.edu.utn.frba.dds.prenda;

public enum Categoria {
  PARTE_SUPERIOR,
  PARTE_INFERIOR,
  CALZADO,
  ACCESORIO,
  CABEZA
}
