package ar.edu.utn.frba.dds.prenda;

public enum Material {
  ALGODON,
  LANA,
  PIQUE,
  ACETATO,
  SEDA,
  CUERO
}